fixes to puppet bootstrap

--- a/support/puppet/data/common.yaml
+++ b/support/puppet/data/common.yaml
@@ -1,12 +1,12 @@
 ---
 bootstrap_symlinks:
   /etc/puppet/Puppetfile:
-    target: $ck99_bootstrap/support/puppet/library/Puppetfile
+    target: "%{ck99_bootstrap}/support/puppet/library/Puppetfile"
   /etc/puppet/Puppetfile.lock:
-    target: $ck99_bootstrap/support/puppet/library/Puppetfile.lock
+    target: "%{ck99_bootstrap}/support/puppet/library/Puppetfile.lock"
   /etc/puppet/manifests:
-    target: $ck99_bootstrap/support/puppet/manifests
+    target: "%{ck99_bootstrap}/support/puppet/manifests"
   /etc/puppet/hiera.yaml:
-    target: $ck99_bootstrap/support/puppet/hiera.yaml
+    target: "%{ck99_bootstrap}/support/puppet/hiera.yaml"
   /etc/puppet/data:
-    target: $ck99_bootstrap/support/puppet/data
+    target: "%{ck99_bootstrap}/support/puppet/data"
