ignore puppetfile.lock

--- a/support/puppet/data/common.yaml
+++ b/support/puppet/data/common.yaml
@@ -3,8 +3,8 @@ apache_log_dir: "/var/log/apache2"
 bootstrap_symlinks:
   /etc/puppet/Puppetfile:
     target: "%{ck99_bootstrap}/support/puppet/library/Puppetfile"
-  /etc/puppet/Puppetfile.lock:
-    target: "%{ck99_bootstrap}/support/puppet/library/Puppetfile.lock"
+#  /etc/puppet/Puppetfile.lock:
+#    target: "%{ck99_bootstrap}/support/puppet/library/Puppetfile.lock"
   /etc/puppet/manifests:
     target: "%{ck99_bootstrap}/support/puppet/manifests"
   /etc/puppet/hiera.yaml:
