--- a/support/puppet/data/common.yaml
+++ b/support/puppet/data/common.yaml
@@ -1,10 +1,12 @@
 ---
 apache_log_dir: "/var/log/apache2"
 bootstrap_symlinks:
+  /etc/puppet/modules:
+    target: "%{ck99_bootstrap}/support/puppet/library/installed-modules"
   /etc/puppet/Puppetfile:
     target: "%{ck99_bootstrap}/support/puppet/library/Puppetfile"
-#  /etc/puppet/Puppetfile.lock:
-#    target: "%{ck99_bootstrap}/support/puppet/library/Puppetfile.lock"
+  /etc/puppet/Puppetfile.lock:
+    target: "%{ck99_bootstrap}/support/puppet/library/Puppetfile.lock"
   /etc/puppet/manifests:
     target: "%{ck99_bootstrap}/support/puppet/manifests"
   /etc/puppet/hiera.yaml:
