--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "support/puppet/library"]
 	path = support/puppet/library
-	url = git@github.com:ck99/server-bootstrap-puppet-library.git
+	url = https://github.com/ck99/server-bootstrap-puppet-library.git
