--- a/vagrant/findamanual/Vagrantfile
+++ b/vagrant/findamanual/Vagrantfile
@@ -9,6 +9,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "raring64-vanilla"
   config.vm.box_url = "http://atlas.bitrithm.co.uk/vagrantboxes/raring64-vanilla.box"
   config.vm.network :private_network, ip: "10.0.0.4"
+  config.vm.synced_folder '/var/shared_data/findamanual_webroot', '/var/www'
   config.ssh.forward_agent = true
   config.vm.provision :shell, :inline => "wget -q -O - https://raw.github.com/ck99/server-bootstrap/master/bootstrap.sh | bash"
+  config.vm.provision :shell, :inline => "/vagrant/install-yii"
 end
